Эксперименты с различными GC [#365872]